# maximal-matching-benchmark

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: bipartite.rs  common.rs  extreme_cases.rs  realworld_structures.rs  scaling_with_density.rs  scaling_with_size.rs  topology_comparison.rs
docs/: benchmark_summary.csv
