[package]
name = "maximal-matching-benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
bench = false

[dependencies]
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", rev = "c8ddcb4" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = "thin"

[profile.bench]
codegen-units = 1
lto = "thin"

[[bench]]
name = "scaling_with_size"
harness = false

[[bench]]
name = "scaling_with_density"
harness = false

[[bench]]
name = "topology_comparison"
harness = false

[[bench]]
name = "realworld_structures"
harness = false

[[bench]]
name = "extreme_cases"
harness = false

[[bench]]
name = "bipartite"
harness = false
